<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory app:title="@string/settings_header_general">

        <androidx.preference.ListPreference
            app:key="theme_preference"
            app:title="@string/settings_title_theme"
            app:defaultValue="system"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory app:title="@string/settings_header_voice">

        <androidx.preference.SeekBarPreference
            app:key="tts_speed"
            app:title="@string/settings_title_tts_speed"
            app:summary="@string/settings_summary_tts_speed"
            android:min="50"
            android:max="150"
            app:defaultValue="100"
            app:showSeekBarValue="true" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>